# linkedin-content-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml
data/: topics.yaml  voice_guide.example.md
migrations/: 001_init.sql
prompts/: analyst.md  angle_mapper.md  critic.md  ideator.md  strategist.md  voice_eval.md  writer.md
scripts/: import_linkedin_export.py  run_daily.py  test_typefully.py
src/: cli.py  config.py  llm.py  schemas.py
src/agents/: base.py  critic.py  evaluator.py  ideator.py  mapper.py  writer.py
src/brain/: db.py  posts.py  similarity.py  voice.py
src/inputs/: news.py
src/outputs/: telegram_bot.py  typefully.py
tests/: conftest.py  test_brain.py  test_voice_match.py
tests/fixtures/: voice_eval_prompts.json
wiki/: Agent-Directory.md  Configuration-Reference.md  Daily-Workflow.md  Data-Model.md  Design-Philosophy.md  HITL-Design.md  Home.md  Prompt-Engineering.md  System-Architecture.md  The-PM-Operating-System-Vision.md  Voice-Match-Eval-Suite.md  What-I-Got-Wrong.md
