[project]
name = "linkedin-agent"
version = "0.1.0"
description = "Multi-agent LinkedIn content system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "structlog>=24.0",
    "chromadb>=0.5.0",
    "feedparser>=6.0",
    "tenacity>=8.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "truststore>=0.10.4",
]

[project.scripts]
agent = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["feedparser", "chromadb.*", "apscheduler.*", "telegram", "telegram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "eval: LLM-backed voice quality eval — slow, requires API key. Run with --run-eval.",
]
